force-app/main/default/objects/Job_Application__c/fields/Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>