force-app/main/default/objects/Job_Application__c/fields/Applicant_Phone__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Phone__c</fullName>
    <defaultValue>$User.Phone</defaultValue>
    <description>Applicant Phone</description>
    <label>Applicant Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>